--- a/package.json
+++ b/package.json
@@ -14,5 +14,11 @@
         "cross-env": "^5.1",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4"
+    },
+    "dependencies": {
+        "angular": "^1.6.9",
+        "bootstrap": "3.3.7",
+        "font-awesome": "^4.7.0",
+        "jquery": "^3.3.1"
     }
 }
