--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dependencies": {
         "angular": "^1.6.9",
         "bootstrap": "3.3.7",
+        "datatables": "^1.10.13",
+        "datatables.net-bs": "^1.10.16",
         "font-awesome": "^4.7.0",
         "jquery": "^3.3.1"
     }
