--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
         "bootstrap": "3.3.7",
         "datatables": "^1.10.13",
         "datatables.net-bs": "^1.10.16",
+        "datatables.net-dt": "^1.10.16",
+        "datatables.net-responsive-bs": "^2.2.1",
+        "datatables.net-responsive-dt": "^2.2.1",
         "font-awesome": "^4.7.0",
         "jquery": "^3.3.1"
     }
