--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
         "php": "^7.1.3",
         "davejamesmiller/laravel-breadcrumbs": "^5.0",
         "fideloper/proxy": "^4.0",
+        "ixudra/curl": "^6.16",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "~2.1.0",
         "spatie/laravel-permission": "^2.9",
-        "yajra/laravel-datatables-oracle": "~8.0"
+        "yajra/laravel-datatables-oracle": "~8.0",
+        "yangqi/htmldom": "^1.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
